fix: Only overflow layout on large devices

--- a/content/assets/css/style.css
+++ b/content/assets/css/style.css
@@ -1,4 +1,6 @@
-.gatsby-highlight {
-    margin-right: -60px;
-    margin-left: -60px;
+@media (min-width: 900px) {
+	.gatsby-highlight {
+    	margin-right: -60px;
+    	margin-left: -60px;
+	}
 }
